[package]
name = "media-server-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "media-server-tools"
path = "src/main.rs"

[[bin]]
name = "copilot-code-sharer"
path = "src/code_sharer.rs"

[[bin]]
name = "copilot-chat-importer"
path = "src/chat_importer.rs"

[[bin]]
name = "auto-programmer"
path = "src/auto_programmer.rs"

[dependencies]
